--- a/.config/i3/config
+++ b/.config/i3/config
@@ -106,8 +106,8 @@ workspace_auto_back_and_forth yes
 bindsym $mod+w workspace back_and_forth
 bindsym $mod+Shift+w move container to workspace back_and_forth; workspace back_and_forth
 
-# toddle between horizontally split and tabbed layout
-bindsym $mod+t layout toggle splith tabbed
+# toddle between horizontally split, tabbed, and vertically split layout
+bindsym $mod+t layout toggle splith tabbed splitv
 
 # split orientation
 bindsym $mod+g split h;exec notify-send 'tile horizontally'
