hard-code termite as default terminal

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -49,7 +49,7 @@ set_from_resource $term_color15    color15
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec termite
 
 # kill focused window
 bindsym $mod+Shift+q kill
