--- a/.taskrc
+++ b/.taskrc
@@ -31,6 +31,7 @@ include /usr/share/doc/task/rc/no-color.theme
 
 color.due.today=bold yellow
 color.overdue=bold red
+color.active=bold blue
 
 report.simple.filter=status:pending
 report.simple.sort=project-/,urgency-,entry
