--- a/.config/i3/config
+++ b/.config/i3/config
@@ -162,6 +162,30 @@ set $ws20 20
 set $ws21 21
 set $ws22 22
 
+# workspace outputs
+workspace 1 output eDP1
+workspace 2 output eDP1
+workspace 3 output eDP1
+workspace 4 output eDP1
+workspace 5 output eDP1
+workspace 6 output eDP1
+workspace 7 output eDP1
+workspace 8 output eDP1
+workspace 9 output eDP1
+workspace 10 output eDP1
+workspace 11 output HDMI1 eDP1
+workspace 12 output HDMI1 eDP1
+workspace 13 output HDMI1 eDP1
+workspace 14 output HDMI1 eDP1
+workspace 15 output HDMI1 eDP1
+workspace 16 output HDMI1 eDP1
+workspace 17 output HDMI1 eDP1
+workspace 18 output HDMI1 eDP1
+workspace 19 output HDMI1 eDP1
+workspace 20 output HDMI1 eDP1
+workspace 21 output HDMI1 eDP1
+workspace 22 output HDMI1 eDP1
+
 # switch to workspace
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
