i3: Assign spotify to workspace 8
also remove joplin

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -276,7 +276,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # Open applications on specific workspaces
 # assign [class="Thunderbird"] $ws1
-assign [class="Joplin"] $ws8
+for_window [class="Spotify"] move to workspace $ws8 # workaround because spotify is not setting hints when mapping the window
 assign [class="Telegram"] $ws9
 assign [class="Riot"] $ws9
 
