--- a/.config/i3/config
+++ b/.config/i3/config
@@ -296,7 +296,7 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 
-set $EXEC_MODE "[f]irefox [s]potify [j]oplin [t]elegram [r]iot"
+set $EXEC_MODE "[f]irefox | [s]potify | [j]oplin | [t]elegram | [r]iot"
 bindsym $mod+e mode $EXEC_MODE
 mode $EXEC_MODE {
     bindsym f exec firefox, mode "default"
@@ -307,7 +307,6 @@ mode $EXEC_MODE {
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
-
 
 # Start i3bar to display a workspace bar (plus the system information i3status if available)
 bar {
@@ -361,9 +360,9 @@ gaps outer -2
 #smart_borders on
 
 # Press $mod+Shift+g to enter the gap mode. Choose o or i for modifying outer/inner gaps. Press one of + / - (in-/decrement for current workspace) or 0 (remove gaps for current workspace). If you also press Shift with these keys, the change will be global for all workspaces.
-set $mode_gaps Gaps: (o) outer, (i) inner
-set $mode_gaps_outer Outer Gaps: +|-|0 (local), Shift + +|-|0 (global)
-set $mode_gaps_inner Inner Gaps: +|-|0 (local), Shift + +|-|0 (global)
+set $mode_gaps gaps: [o]uter | [i]nner
+set $mode_gaps_outer outer gaps: [+/-/0] (local) | Shift + [+/-/0] (global)
+set $mode_gaps_inner inner gaps: [+/-/0] (local) | Shift + [+/-/0] (global)
 bindsym $mod+Shift+g mode "$mode_gaps"
 
 mode "$mode_gaps" {
