ic config: Replace deprecated new_window and new_float

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -90,8 +90,8 @@ bindsym $mod+d exec dmenu_run
 exec ~/.venv/nao/bin/python3 ~/Repositories/HULKs/nao/scripts/alivenessReceiver.py
 
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
-new_window pixel 1
-new_float normal
+default_border pixel 1
+default_floating_border normal
 
 # Hide borders
 hide_edge_borders none
