--- a/.config/i3/config
+++ b/.config/i3/config
@@ -118,12 +118,11 @@ workspace_auto_back_and_forth yes
 bindsym $mod+w workspace back_and_forth
 bindsym $mod+Shift+w move container to workspace back_and_forth; workspace back_and_forth
 
-# toddle between horizontally split, tabbed, and vertically split layout
-bindsym $mod+t layout toggle splith tabbed splitv
+# toggle between horizontal and vertical split
+bindsym $mod+v split toggle
 
-# split orientation
-bindsym $mod+g split h;exec notify-send 'tile horizontally'
-bindsym $mod+v split v;exec notify-send 'tile vertically'
+# toggle between tabbed and splith layout
+bindsym $mod+t layout toggle tabbed splith
 
 # toggle fullscreen mode for the focused container
 bindsym $mod+m fullscreen toggle
