i3: hide curcor when taking screenshots

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -67,8 +67,8 @@ bindsym XF86MonBrightnessUp exec xbacklight -inc 10
 bindsym XF86MonBrightnessDown exec xbacklight -dec 10
 
 # screenshot keys
-bindsym $mod+Print exec maim -s ~/Pictures/Screenshots/screenshot-$(date +%Y-%m-%d-%H-%M-%S).png
-bindsym $mod+ctrl+Print exec maim ~/Pictures/Screenshots/screenshot-$(date +%Y-%m-%d-%H-%M-%S).png
+bindsym $mod+Print exec maim -s --hidecursor ~/Pictures/Screenshots/screenshot-$(date +%Y-%m-%d-%H-%M-%S).png
+bindsym $mod+ctrl+Print exec maim --hidecursor ~/Pictures/Screenshots/screenshot-$(date +%Y-%m-%d-%H-%M-%S).png
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
