--- a/.config/i3/config
+++ b/.config/i3/config
@@ -101,8 +101,8 @@ bindsym $mod+Shift+l move right
 
 # workspace back and forth (with/without active container)
 #workspace_auto_back_and_forth yes
-#bindsym $mod+w workspace back_and_forth
-#bindsym $mod+Shift+w move container to workspace back_and_forth; workspace back_and_forth
+bindsym $mod+w workspace back_and_forth
+bindsym $mod+Shift+w move container to workspace back_and_forth; workspace back_and_forth
 
 # toggle between horizontal and vertical split
 bindsym $mod+v split toggle
