--- a/.config/i3/config
+++ b/.config/i3/config
@@ -81,6 +81,9 @@ exec ~/.venv/nao/bin/python3 ~/Repositories/HULKs/nao/scripts/alivenessReceiver.
 # start alternating_layouts script
 exec --no-startup-id ~/.venv/i3/bin/python3 ~/i3-scripts/i3-alternating-layout/alternating_layouts.py
 
+# set background image (use exec_always so that it is executed upon reloading the config)
+exec_always ~/.fehbg
+
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
 default_border pixel 1
 default_floating_border normal
