termite: Add colors

--- a/.config/termite/config
+++ b/.config/termite/config
@@ -1,3 +1,48 @@
 [options]
 font = Monospace 11
 scrollback_lines = 10000
+
+[colors]
+foreground          = #D8D8D8
+foreground_bold     = #E8E8E8
+cursor              = #E8E8E8
+cursor_foreground   = #181818
+background          = rgba(24, 24, 24)
+
+# Black, Gray, Silver, White
+color0  = #181818
+color8  = #585858
+color7  = #D8D8D8
+color15 = #F8F8F8
+
+# Red
+color1  = #AB4642
+color9  = #AB4642
+
+# Green
+color2  = #A1B56C
+color10 = #A1B56C
+
+# Yellow
+color3  = #F7CA88
+color11 = #F7CA88
+
+# Blue
+color4  = #7CAFC2
+color12 = #7CAFC2
+
+# Purple
+color5  = #BA8BAF
+color13 = #BA8BAF
+
+# Teal
+color6  = #86C1B9
+color14 = #86C1B9
+
+# Extra colors
+color16 = #DC9656
+color17 = #A16946
+color18 = #282828
+color19 = #383838
+color20 = #B8B8B8
+color21 = #E8E8E8
