polybar: Move date to right

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -16,9 +16,9 @@ include-file = ~/.config/polybar/modules.ini
 
 [bar/main]
 ; modules ----------------------------------------------------------------------
-modules-left = date workspaces
+modules-left = workspaces i3
 modules-center = title
-modules-right = alsa cpu temperature memory filesystem battery network
+modules-right = alsa cpu temperature memory filesystem battery network date
 
 ; Number of spaces to add before/after each module
 module-margin-left = 1
