polybar: Settings for multiple monitors

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -15,6 +15,10 @@ include-file = ~/.config/polybar/modules.ini
 
 
 [bar/main]
+; monitors ---------------------------------------------------------------------
+monitor = ${env:MONITOR:}
+
+
 ; modules ----------------------------------------------------------------------
 modules-left = workspaces i3
 modules-center = title
@@ -113,6 +117,17 @@ wm-name = i3
 ; Restack the bar window and put it above the selected window manager's root
 ; Fixes the issue where the bar is being draw on top of fullscreen window's
 wm-restack = i3
+
+; Only show workspaces defined on the same output as the bar
+;
+; Useful if you want to show monitor specific workspaces
+; on different bars
+pin-workspaces = false
+
+; Sort the workspaces by index instead of the default
+; sorting that groups the workspaces by output
+;
+index-sort = true
 
 
 ; other ------------------------------------------------------------------------
