--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1,110 +1,128 @@
+[module/i3]
+
+type = internal/i3
+
+; Mouse click
+enable-click = true
+
+; Mouse scroll
+enable-scroll = false
+
+; Sort
+index-sort = true
+
+; Focused label
+label-focused            = %name%
+label-focused-background = ${colors.fg}
+label-focused-foreground = ${colors.bg}
+label-focused-padding    = 2
+
+; Unfocused labels
+label-unfocused            = %name%
+label-unfocused-foreground = ${colors.fg}
+label-unfocused-padding    = 2
+
+; Visible labels
+label-visible            = %name%
+label-visible-foreground = ${colors.fg}
+label-visible-padding    = 2
+
+; Urgent labels
+label-urgent            = %name%
+label-urgent-foreground = ${colors.color01}
+label-urgent-padding    = 2
+
+
+[module/title]
+
+type = internal/xwindow
+
+format = <label>
+format-background = ${colors.bg}
+format-overline = ${colors.bg}
+format-padding = 2
+
+label = %title%
+label-maxlen = 80
+
+
 [module/alsa]
+
 type = internal/alsa
 
 ; volume
-format-volume = VOL <label-volume>
-format-volume-background = ${color.color19}
-format-volume-underline = ${color.bg}
-format-volume-overline = ${color.bg}
+format-volume = <label-volume>
+format-volume-background = ${colors.color01}
 format-volume-padding = 2
-format-volume-margin = 0
 
 label-volume = %percentage%%
 
 ; muted
-format-muted-background = ${color.color19}
-format-muted-underline = ${color.bg}
-format-muted-overline = ${color.bg}
+format-muted-background = ${colors.bg}
 format-muted-padding = 2
-format-muted-margin = 0
-format-muted-prefix =
 
 label-muted = "MUTED"
-label-muted-foreground = ${color.fg}
+label-muted-foreground = ${colors.fg}
 
 
-[module/battery]
-type = internal/battery
+[module/temperature]
 
-; This is useful in case the battery never reports 100% charge
-full-at = 99
+type = internal/temperature
 
-; Use the following command to list batteries and adapters:
-; $ ls -1 /sys/class/power_supply/
-battery = BAT0
-adapter = AC
+; Label
+label            = %temperature-c%
+label-background = ${colors.bg}
+label-foreground = ${colors.fg}
+label-padding    = 2
 
-; If an inotify event haven't been reported in this many
-; seconds, manually poll for new values.
-;
-; Needed as a fallback for systems that don't report events
-; on sysfs/procfs.
-;
-; Disable polling by setting the interval to 0.
-poll-interval = 5
-
-time-format = %H:%M
-
-; full
-label-full = BAT 100%
-label-full-background = ${color.color19}
-label-full-underline = ${color.bg}
-label-full-overline = ${color.bg}
-label-full-padding = 2
-label-full-margin = 0
-
-; charging
-format-charging = CHR <label-charging>
-format-charging-background = ${color.color19}
-format-charging-underline = ${color.bg}
-format-charging-overline = ${color.bg}
-format-charging-padding = 2
-format-charging-margin = 0
-
-label-charging = %percentage%%
-
-; discharging
-format-discharging = BAT <label-discharging>
-format-discharging-background = ${color.color19}
-format-discharging-underline = ${color.bg}
-format-discharging-overline = ${color.bg}
-format-discharging-padding = 2
-format-discharging-margin = 0
-
-label-discharging = %percentage%%
+; Warning label
+label-warn            = %temperature-c%
+label-warn-background = ${colors.color01}
+label-warn-foreground = ${colors.fg}
+label-warn-padding    = 2
 
 
 [module/cpu]
+
 type = internal/cpu
 
 interval = 1
 
 format = <label>
-format-background = ${color.color19}
-format-underline = ${color.bg}
-format-overline = ${color.bg}
+format-background = ${colors.bg}
 format-padding = 2
-format-margin = 0
 
-label = CPU %percentage%%
+label = %percentage%%
 
 
-[module/date]
-type = internal/date
+[module/ram]
 
-interval = 1.0
+type = internal/memory
 
-time = %Y-%m-%d %H:%M:%S
+interval = 1
 
 format = <label>
+format-background = ${colors.bg}
 format-padding = 2
-format-foreground = ${color.fg}
-format-background = ${color.color19}
 
-label = %time%
+label = %gb_used%/%gb_free%
+
+
+[module/swap]
+
+type = internal/memory
+
+interval = 1
+
+format = <label>
+format-background = ${colors.bg}
+format-padding = 2
+
+label = %gb_swap_used%/%gb_swap_free%
 
 
 [module/filesystem]
+
 type = internal/fs
 
 mount-0 = /
@@ -115,161 +133,53 @@ interval = 30
 fixed-values = false
 
 format-mounted = <label-mounted>
-format-mounted-background = ${color.color19}
-format-mounted-underline = ${color.bg}
-format-mounted-overline = ${color.bg}
+format-mounted-background = ${colors.bg}
 format-mounted-padding = 2
-format-mounted-margin = 0
 
-label-mounted = FS %free%
-
-
-[module/memory]
-type = internal/memory
-
-interval = 1
-
-format = <label>
-format-background = ${color.color19}
-format-underline = ${color.bg}
-format-overline = ${color.bg}
-format-padding = 2
-format-margin = 0
-
-label = MEM %percentage_used%% SWP %percentage_swap_used%%
+label-mounted = %free%/%total%
 
 
-[module/network]
-type = internal/network
-interface = wlp3s0
+[module/battery]
 
-interval = 1
+type = internal/battery
 
-; Accumulate values from all interfaces when querying for up/downspeed rate
-accumulate-stats = true
+; Full battery level
+full-at = 99
 
-; connected
-format-connected = <label-connected>
-format-connected-background = ${color.color19}
-format-connected-underline = ${color.bg}
-format-connected-overline = ${color.bg}
-format-connected-padding = 2
-format-connected-margin = 0
+; Battery and adapter
+battery = BAT0
+adapter = AC0
 
-label-connected = "D %downspeed:2% | U %upspeed:2%"
+; Charging label
+label-charging            = %percentage%%
+label-charging-background = ${colors.bg}
+label-charging-foreground = ${colors.fg}
+label-charging-padding    = 2
 
-; disconnected
-format-disconnected = <label-disconnected>
-format-disconnected-background = ${color.color19}
-format-disconnected-underline = ${color.bg}
-format-disconnected-overline = ${color.bg}
-format-disconnected-padding = 2
-format-disconnected-margin = 0
+; Discharging label
+label-discharging            = %percentage%%
+label-discharging-background = ${colors.color01}
+label-discharging-foreground = ${colors.fg}
+label-discharging-padding    = 2
 
-label-disconnected = DISCONNECTED
-
-
-[module/temperature]
-type = internal/temperature
-
-interval = 1
-
-; Thermal zone to use
-; To list all the zone types, run
-; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
-thermal-zone = 0
-
-; Threshold temperature to display warning label (in degrees celsius)
-warn-temperature = 80
-
-; Whether or not to show units next to the temperature tokens (°C, °F)
-units = true
-
-; temperature
-format = <label>
-format-background = ${color.color19}
-format-underline = ${color.bg}
-format-overline = ${color.bg}
-format-padding = 2
-format-margin = 0
-
-label = TEMP %temperature-c%
-
-; warning
-format-warn = <label-warn>
-format-warn-background = ${color.color19}
-format-warn-underline = ${color.bg}
-format-warn-overline = ${color.bg}
-format-warn-padding = 2
-format-warn-margin = 0
-
-label-warn = TEMP %temperature-c%
-label-warn-foreground = ${color.color01}
+; Full label
+label-full            = 100%
+label-full-background = ${colors.bg}
+label-full-foreground = ${colors.fg}
+label-full-padding = 2
 
 
-[module/title]
-type = internal/xwindow
+[module/date]
+
+type = internal/date
+
+interval = 1.0
+
+time = %Y-%m-%d %H:%M:%S
 
 format = <label>
-format-background = ${color.bg}
-format-underline = ${color.bg}
-format-overline = ${color.bg}
 format-padding = 2
-format-margin = 0
+format-foreground = ${colors.fg}
+format-background = ${colors.bg}
 
-label = %title%
-label-maxlen = 80
-
-
-[module/workspaces]
-type = internal/xworkspaces
-
-; Create click handler used to focus desktop
-enable-click = true
-
-; Don't create scroll handlers used to cycle desktops
-enable-scroll = false
-
-; NOTE: The desktop name needs to match the name configured by the WM
-; You can get a list of the defined desktops using:
-; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1;1
-icon-1 = 2;2
-icon-2 = 3;3
-icon-3 = 4;4
-icon-4 = 5;5
-icon-5 = 6;6
-icon-6 = 7;7
-icon-7 = 8;8
-icon-8 = 9;9
-
-format = <label-state>
-format-background = ${color.color19}
-format-underline = ${color.bg}
-format-overline = ${color.bg}
-format-padding = 0
-format-margin = 0
-
-; active
-label-active = %icon%
-label-active-foreground = ${color.bg}
-label-active-background = ${color.fg}
-label-active-padding = 4
-
-; occupied
-label-occupied = %icon%
-label-occupied-foreground = ${color.fg}
-label-occupied-background = ${color.color19}
-label-occupied-padding = 4
-
-; urgent
-label-urgent = %icon%
-label-urgent-foreground = ${color.bg}
-label-urgent-background = ${color.color01}
-label-urgent-padding = 4
-
-; empty
-label-empty = %icon%
-label-empty-foreground = ${color.fg}
-label-empty-background = ${color.color19}
-label-empty-padding = 4
+label = %time%
