--- a/.tmux.conf
+++ b/.tmux.conf
@@ -36,7 +36,7 @@ set-option -g status-keys vi
 set-option -g status-left "[#S] "
 set-option -g status-left-length 10
 set-option -g status-left-style default
-set-option -g status-position bottom
+set-option -g status-position top
 set-option -g status-right "#{?window_bigger,[#{window_offset_x}#,#{window_offset_y}] ,}\"#{=21:pane_title}\" %H:%M %d-%b-%y"
 set-option -g status-right-length 40
 set-option -g status-right-style default
