polybar: Launch it on all monitors

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -9,6 +9,9 @@ include-file = ~/.config/polybar/modules.ini
 
 [bar/main]
 
+; Override monitor with environment variable
+monitor = ${env:MONITOR:}
+
 ; Modules
 modules-left = i3
 modules-center = title
