--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -20,6 +20,9 @@ modules-right = alsa temperature cpu ram swap filesystem battery date
 ; Put the bar at the bottom of the screen
 bottom = false
 
+; tray position
+;tray-position = right
+
 ; Prefer fixed center position for the `modules-center` block
 ; When false, the center position will be based on the size of the other blocks.
 fixed-center = true
