tmux: Split/new window in current dir

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -55,6 +55,10 @@ set-option -g visual-bell off
 set-option -g visual-silence off
 set-option -g word-separators " -_@"
 
+bind-key '"' split-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
