polybar: Add number of arch updates script module

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -15,7 +15,7 @@ monitor = ${env:MONITOR:}
 ; Modules
 modules-left = i3
 modules-center = title
-modules-right = alsa temperature cpu ram swap filesystem battery date
+modules-right = updates-arch-combined alsa temperature cpu ram swap filesystem battery date
 
 ; Put the bar at the bottom of the screen
 bottom = false
