--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -46,6 +46,14 @@ label = %title%
 label-maxlen = 80
 
 
+[module/updates-arch-combined]
+# see https://github.com/polybar/polybar-scripts/tree/master/polybar-scripts/updates-arch-combined
+type = custom/script
+exec = ~/.polybar-scripts/polybar-scripts/updates-arch-combined/updates-arch-combined.sh
+interval = 600
+format-padding = 2
+
+
 [module/alsa]
 
 type = internal/alsa
