--- a/.config/i3/config
+++ b/.config/i3/config
@@ -278,7 +278,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # workaround because spotify is not setting hints when mapping the window
 for_window [class="Spotify"] move to workspace $ws8
 assign [class="Telegram"] $ws9
-assign [class="Riot"] $ws9
+assign [class="Element"] $ws9
 assign [class="Slack"] $ws9
 
 # Open specific applications in floating mode
