tmux: Use 256 color terminal

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -15,6 +15,10 @@ set-option -g status-right-length 40
 set-option -g status-right-style default
 set-option -g status-style fg=white,bg=black
 
+# Use 256 color terminal
+set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
+
 bind-key '"' split-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key c new-window -c "#{pane_current_path}"
