--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,7 @@
 [init]
 	templatedir = ~/.git_templates
+[core]
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [user]
 	email = felix.wege@tuhh.de
 	name = Felix Wege
